--- a/package.json
+++ b/package.json
@@ -8,21 +8,21 @@
     "type": "git",
     "url": "https://github.com/nnnick/Chart.js.git"
   },
-  "license" : "MIT",
+  "license": "MIT",
   "dependences": {},
   "devDependencies": {
-    "gulp": "3.9.x",
+    "gulp": "^3.9.1",
     "gulp-concat": "~2.1.x",
     "gulp-connect": "~2.0.5",
+    "gulp-html-validator": "^0.0.2",
     "gulp-jshint": "~1.5.1",
+    "gulp-livereload": "^3.8.0",
     "gulp-replace": "^0.4.0",
     "gulp-size": "~0.4.0",
     "gulp-uglify": "~1.5.x",
     "gulp-util": "~2.2.x",
-    "gulp-html-validator": "^0.0.2",
     "inquirer": "^0.5.1",
-    "semver": "^3.0.1",
-    "gulp-livereload": "^3.8.0"
+    "semver": "^3.0.1"
   },
   "spm": {
     "main": "Chart.js"
